src/test/ui/empty/empty-macro-use.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/empty-macro-use.rs:7:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^
   |
   = note: consider importing this macro:
           two_macros::macro_two

error: aborting due to previous error

